# python-pygame-juniorpen01s-snake

./: LICENSE.md  README.md  pyproject.toml
src/core/: direction.py  game.py  snake.py
src/juniorpen01s_snake/: __init__.py
tests/: snake_test.py
